feat(catalog): implement search by product name and jastiper